--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -1,45 +1,45 @@
 body {
-    margin: 30px;
+   margin-left: 120px;
+   margin-right: 120px;
 }
 
-img {
-    width: 100px;
-    height:100px;
-}
-
-.header {
-    padding: 60px;
+.header { 
+   justify-content: center;
+   align-items: center;
 }
 
 .header-content {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-around;
     gap: 16px;
 }
+
 ul {
     list-style-type: none;
-    display: flex;
+    display:flex;
     margin: 0;
     padding: 0;
     gap: 16px;
 }
 
 .container-1 {
-    padding: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+
 .image {
     margin: 20px;
+    border-radius: 10px;
 }
-
 
 
 .title {
     font-size: 36px;
     font-weight: 900;
+    margin-top: 90px;
     margin-bottom: 32px;
     text-align: center;
 }
@@ -49,7 +49,28 @@ ul {
     gap: 52px;
 }
 
+img {
+    width: 100px;
+    height:100px;
+    border-radius: 10px;
+}
 .info {
     max-width: 200px;
     text-align: center;
+}
+
+.container{
+    margin-bottom: 90px;
+}
+.quote blockquote{
+    text-align: center;
+    margin: 32px;
+    font-size: 36px;
+}
+
+.quote cite {
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+
 }
