--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -1,38 +1,45 @@
-body {
-   margin-left: 120px;
-   margin-right: 120px;
-}
 
+body {
+    margin: 0;
+    padding: 0;
+}
 .header { 
-   justify-content: center;
-   align-items: center;
+   padding: 20px;
+   background-color: #1F2937;
+   color: #F9FAF8;
 }
 
 .header-content {
+    margin-left: 190px;
+    margin-right: 190px;
     display: flex;
+    margin-bottom: 90px;
     align-items: center;
-    justify-content: space-around;
-    gap: 16px;
+    justify-content: space-between;
 }
 
 ul {
     list-style-type: none;
     display:flex;
     margin: 0;
-    padding: 0;
+    padding:0;
     gap: 16px;
 }
 
-.container-1 {
+.header-text {
+    margin: 30px;
+}
+
+.hero {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-
-.image {
-    margin: 20px;
-    border-radius: 10px;
+.adventure {
+    display: flex;
+    width:100px;
+    height: 200px;
+    border-radius: 300px;
 }
 
 
@@ -46,10 +53,12 @@ ul {
 .container {
     display: flex;
     justify-content:center;
+    margin-bottom: 90px;
+    background-color: white ;
     gap: 52px;
 }
 
-img {
+.image {
     width: 100px;
     height:100px;
     border-radius: 10px;
@@ -59,12 +68,19 @@ img {
     text-align: center;
 }
 
-.container{
-    margin-bottom: 90px;
+
+
+.quote {
+    background-color: #E5E7EB;
+    padding: 90px;
+    color: #1F2937;
+    font-size: 36px;
+    font-style: light italic;
+
 }
+
 .quote blockquote{
     text-align: center;
-    margin: 32px;
     font-size: 36px;
 }
 
@@ -73,4 +89,36 @@ img {
     font-size: 18px;
     font-style: normal;
 
+}
+
+
+
+
+.action {
+    display: flex;
+    color: #1F2937;
+    justify-content: space-around;
+    margin: 170px;
+    margin-top: 90px;
+    padding: 40px;
+    background-color: #3882f6;
+}
+
+button {
+    background-color: #3882f6;
+    margin: 30px;
+}
+
+.background {
+    color: white;
+}
+
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 30px;
 }
