--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -35,11 +35,15 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 30px
+   
 }
 .header-text {
     padding: 30px;
+    margin-left:100px
+    
 }
+
+
 
 .sign-up {
     background-color: #3882f6;
@@ -55,6 +59,7 @@ ul {
     padding: 30px red;
     height: 200px;
     border-radius: 300px;
+    margin-right:190px
 }
 
 
@@ -87,7 +92,7 @@ ul {
 
 .quote {
     background-color: #E5E7EB;
-    padding: 90px;
+    padding: 120px;
     color: #1F2937;
     font-size: 36px;
     font-style: italic;
