--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -114,14 +114,30 @@ ul {
 
 
 
+.action-text {
+  display: flex; 
+  flex-direction: column;
+  margin: 30px;
+  
+}
+
+
+.background {
+    align-items: center;
+    justify-content: center;
+    color: white;
+    display: flex;
+    padding: 90px
+
+}
 .action {
     display: flex;
+    align-items: center;
+    justify-content: center;
     color: #F9FAF8;
-    justify-content: space-around;
-    margin: 170px;
-    margin-top: 90px;
-    padding: 40px;
+    padding: 30px 350px 30px;
     background-color: #3882f6;
+    border-radius: 8px;
 }
 
 .sign-up2 {
@@ -133,9 +149,6 @@ ul {
     border:2px solid #F9FAF8;
 }
 
-.background {
-    color: white;
-}
 
 
 .footer {
@@ -156,5 +169,12 @@ a {
 }
 p {
     color: #e6e6e6;
+    margin: 2px;
+    padding: 0;
 }
 
+h3, h1 {
+    margin: 2px;
+    padding: 0;
+    color:#F9FAF8
+}
